# es8311-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  register.rs
src/config/: coefficients.rs
src/register/: adc.rs  adc_eq.rs  clock_manager.rs  dac.rs  dac_eq.rs  system.rs
