[package]
name = "es8311"
version = "0.1.0"
edition = "2021"
authors = ["Ronen Ulanovsky <ronen.ulanovsky.5@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0-alpha.8"
strum = { version = "0.24.1", default-features = false, features = ["derive"] }
log = "0.4.17"

[features]
default = ["std"]
std = ["strum/std"]
